--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,20 @@
 /Boj_2577/
 /Boj_2920/
 /Boj_8958/
+/string_example/
+/Boj_11720/
+/Boj_5565/
+/Boj_10886.class
+/Boj_10886/
+/Boj_12790/
+/Boj_2884/
+/Boj_5063/
+/Boj_10707/
+/Boj_2822/
+/Boj_12791/
+/Boj_5597/
+/Boj_5533/
+/Main.class
+/Boj_5596/
+/Boj_5554/
+/Boj_5532/
